ghp: updating license, index.html, adding .nojekyll

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="content">
-<h1>vmmgr</h1>
+<h1 class="libTop">vmmgr</h1>
 
 <p>We are set up to operate in four zones: eu-west-1, us-east-1, us-west-1,
 and us-west-2.</p>
