minor fixes to web pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ eu-west-1, us-east-1, us-west-1, and us-west-2.</p>
 <li><strong>eu-west-1</strong> is in Ireland and serves the European Union (EU) area</li>
 <li><strong>us-east-1</strong> is on the US East Coast (in or attached to MAE East)</li>
 <li><strong>us-west-1</strong> is in California</li>
-<li><strong>us-west-2</strong> is in Oregon.<br /></li>
+<li><strong>us-west-2</strong> is in Oregon.</li>
 </ul>
 
 <p>We have <strong>VPCs</strong> (virtual private clouds) in each of these zones.</p>
@@ -52,6 +52,8 @@ and then executing the command.</p>
 
 <p>Just a hint of a sketch.  Tests get AuthFailures.</p>
 
+<h2>On-line Documentation</h2>
+
 <h2>Licensing</h2>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />The material on this github.io website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Project software is licensed under an MIT license.
@@ -67,7 +69,7 @@ Follow the SOFTWARE LICENSE link below for more information on project software 
        </a> project
     </div>
     <div class="logo" >
-      <a href="http://www.xlattice.org">
+      <a href="https://jddixon.github.io/xlattice/">
       <img src="img/xlattice-2014.jpg" alt="the XLattice Project" style="float: right;" >
       </a>
     </div>
