add skeletal utilities

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ of networks, instances, and volumes in Amazon&rsquo;s
 <a href="https://aws.amazon.com/ec2">EC2 cloud.</a></p>
 
 <p>The python scripts use
-<a href="https://github.com/boto/boto">boto,</a>
+<a href="https://github.com/boto/boto3">boto,</a>
 a package for communicating with
 <a href="https://aws.amazon.com">Amazon Web Services</a>
 (AWS), which include the EC2 cloud.</p>
@@ -51,8 +51,6 @@ and then executing the command.</p>
 <h2>Project Status</h2>
 
 <p>Just a hint of a sketch.  Tests get AuthFailures.</p>
-
-<h2>On-line Documentation</h2>
 
 <h2>Licensing</h2>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />The material on this github.io website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
