actually add skeletal utilities

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <div class="content">
 <h1 class="libTop">vmmgr</h1>
 
+<h2>General</h2>
+
 <p>Configuration files and Python3 scripts for managing the configuration
 of networks, instances, and volumes in Amazon&rsquo;s
 <a href="https://aws.amazon.com/ec2">EC2 cloud.</a></p>
@@ -48,9 +50,26 @@ a command like</p>
 adding a line to make.groups after commenting out the preceding line(s)
 and then executing the command.</p>
 
+<h2>Utilities</h2>
+
+<h3>VmInit</h3>
+
+<h3>VmKill</h3>
+
+<h3>vmLaunch</h3>
+
+<h3>vmList</h3>
+
+<h3>vmScrub</h3>
+
+<h3>vmUpdate</h3>
+
+<h3>vmVerify</h3>
+
 <h2>Project Status</h2>
 
-<p>Just a hint of a sketch.  Tests get AuthFailures.</p>
+<p>Just a hint of a sketch.  Tests get ResourceWarnings due to unclosed
+SSL sockets.</p>
 
 <h2>Licensing</h2>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />The material on this github.io website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
